added uncoveredComponent handling, and view deck, hourglass misses